envoy/envoy-jwt.yaml
static_resources:
  listeners:
  - name: listener_auth
    address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: http_proxy
          route_config:
            name: local_route
            virtual_hosts:
              - name: backend
                domains:
                  - "*"
                routes:
                  - match:
                      prefix: "/auth"
                    route:
                      cluster: auth_cluster
                  - match:
                      prefix: "/banks"
                    route:
                      cluster: banks_cluster
                cors:
                  allow_headers: Content-Type, Accept, Origin, jwt-assertion
                  allow_credentials: true
                  max_age: "1728000"
                  allow_methods: GET,POST,PUT,DELETE,OPTIONS
                  expose_headers: x-jwt-payload
          http_filters:
            - name: envoy.filters.http.jwt_authn
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                providers:
                  auth_provider:
                    issuer: auth_cluster
                    audiences:
                      - banks
                    remote_jwks:
                      http_uri:
                        uri: https://auth/auth/api/jwks.json
                        cluster: auth_cluster
                        timeout: 1s
                      cache_duration:
                        seconds: 300
                    from_headers:
                      - name: "jwt-assertion"
                    forward: "true"
                    forward_payload_header: "x-jwt-payload"
                rules:
                  # Not jwt verification is required for /health path
                  - match:
                      prefix: /auth

                  # Jwt verification for provider1 is required for path prefixed with "prefix"
                  - match:
                      prefix: /banks
                    requires:
                      provider_name: auth_provider
                bypass_cors_preflight: 'true'
            
            - name: envoy.filters.http.cors
            - name: envoy.filters.http.router

  clusters:
    - name: auth_cluster
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: auth_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: auth
                  port_value: 8000

    - name: banks_cluster
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: banks_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: banks
                  port_value: 8001
