envoy/envoy.yaml
static_resources:
  listeners:
  - name: listener_auth
    address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: http_proxy
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: auth
            virtual_hosts:
            - name: auth_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/auth"
                route:
                  cluster: auth_cluster
              - match:
                  prefix: "/banks"
                route:
                  cluster: banks_cluster

  clusters:
    - name: auth_cluster
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: auth_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: auth
                  port_value: 8000
    - name: banks_cluster
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: banks_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: banks
                  port_value: 8001
